Added mod entries

--- a/src/components/LinkCardGrid.astro
+++ b/src/components/LinkCardGrid.astro
@@ -17,7 +17,7 @@ const { cards = [] } = Astro.props;
         </div>
 
         <div class="cardAction">
-          <a class="btn btnPrimary" href={card.href}>View Mod</a>
+          <a class="btn btnPrimary" href={card.href}>View Wiki</a>
         </div>
       </div>
     ))}
