--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -8,7 +8,7 @@
     <div class="links">
       <a href="/about/">About Us</a>
       <a href="/faq/">FAQ</a>
-      <a href="/docs/mods/">Mods</a>
+      <a href="/mods/">Mods</a>
       <a
         href="https://github.com/Let-s-Do-Collection"
         target="_blank"
