--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -64,10 +64,30 @@ const mods = [
     title: "Farm & Charm",
     logo: "/assets/mod-logos/farm_and_charm.png",
     description: "Cozy farming with atmosphere, food prep, and rustic everyday interactions.",
-    wiki: "/docs/mods/farm-and-charm/",
+    wiki: "/wiki/farm-and-charm/",
     source: "https://github.com/Let-s-Do-Collection/FarmAndCharm",
-    tags: ["farming", "food", "atmosphere", "decor", "plants"],
-  },
+    tags: [
+    "farming",
+    "food",
+    "cooking",
+    "processing",
+    "agriculture",
+    "crafting",
+    "storage",
+    "blocks",
+    "items",
+    "crops",
+    "ingredients",
+    "stations",
+    "decor",
+    "plants",
+    "cozy",
+    "rustic",
+    "immersive",
+    "vanilla-plus",
+    "lets-do-core"
+  ],
+   },
 {
   title: "Furniture",
   logo: "/assets/mod-logos/furniture.png",
