--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@
 
     <div class="footerText">
       Copyright 2026 © satisfy<br />
-      Let's Do is not affiliated with or endorsed by Mojang Studios
+      Let's Do is not affiliated with Mojang Studios
     </div>
   </div>
 
