--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -6,7 +6,7 @@
     </a>
 
     <div class="links">
-      <a href="/about/">About Us</a>
+      <a href="/about/">About</a>
       <a href="/faq/">FAQ</a>
       <a href="/mods/">Mods</a>
       <a
