--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -108,9 +108,21 @@ const mods = [
     title: "HerbalBrews",
     logo: "/assets/mod-logos/herbalbrews.png",
     description: "Herbal drinks, cozy brewing, and small features that fit naturally into gameplay.",
-    wiki: "/docs/mods/herbalbrews/",
+    wiki: "/wiki/herbalbrews/",
     source: "https://github.com/Let-s-Do-Collection/HerbalBrews",
-    tags: ["drinks", "herbs", "brewing", "atmosphere", "plants"],
+tags: [
+  "tea",
+  "coffee",
+  "flasks",
+  "potions",
+  "brewing",
+  "cauldron",
+  "kettle",
+  "flowers",
+  "wild-crops",
+  "worldgen",
+  "decor",
+]
   },
   {
     title: "Lili's Pottery",
